--- a/src/app/components/articles/creature-article-update/creature-article-update.component.html
+++ b/src/app/components/articles/creature-article-update/creature-article-update.component.html
@@ -18,12 +18,22 @@
 
 
         <!-- Form -->
-        <app-formly-formcontainer 
+        <app-formly-formcontainer
+        *ngIf="isInUpdateState() || isInCreateState()"
         [model]="userModel" 
         [fields]="formlyFields" 
         (formlySubmit)="onSubmit()" 
         (formlyCancel)="onCancel()"
         ></app-formly-formcontainer>
+
+        <app-compare-form-container
+        *ngIf="isInOutdatedUpdateState()"
+        [formlyFields]="formlyFields"
+        [modelFromUser]="userModel"
+        [modelFromServer]="serverModel"
+        (updateSubmit)="onSubmit()"
+        (cancel)="onCancel()"
+        ></app-compare-form-container>
 
     </article>
     
