--- a/src/app/components/articles/marker-update/marker-update.component.html
+++ b/src/app/components/articles/marker-update/marker-update.component.html
@@ -1,21 +1,21 @@
 <div class="main">
-    <article class="mb-5" *ngIf="model; else loading">
+    <article class="mb-5" *ngIf="userModel; else loading">
         <!-- Heading -->
-        <div *ngIf="formState===constants.updateState; else createState">
+        <div *ngIf="(isInOutdatedUpdateState() || isInUpdateState()) && userModel; else createState">
             <app-edit-toggle 
             [isInUpdateState]=true 
             [link]="'..'"
             ></app-edit-toggle>
 
-            <h2 class="text-center"> Updating Marker for {{model.location_details.name}} on {{model.map_details.name}} </h2>
+            <h2 class="text-center"> Updating Marker for {{userModel.location_details.name}} on {{userModel.map_details.name}} </h2>
         </div>
 
         <ng-template #createState>
             <app-edit-toggle 
             [isInUpdateState]=true 
             [link]="routingService.getRoutePath('location', {
-                    parent_name: model.location_details.parent_location_name, 
-                    name: model.location_details.name
+                    parent_name: userModel.location_details.parent_location_name, 
+                    name: userModel.location_details.name
                 }
             )"
             ></app-edit-toggle>
@@ -24,12 +24,22 @@
         </ng-template>
 
         <!-- Form -->
-        <app-formly-formcontainer 
-        [model]="model" 
-        [fields]="fields" 
+        <app-formly-formcontainer
+        *ngIf="isInUpdateState() || isInCreateState()"
+        [model]="userModel" 
+        [fields]="formlyFields" 
         (formlySubmit)="onSubmit()" 
         (formlyCancel)="onCancel()"
         ></app-formly-formcontainer>
+
+        <app-compare-form-container
+        *ngIf="isInOutdatedUpdateState()"
+        [formlyFields]="formlyFields"
+        [modelFromUser]="userModel"
+        [modelFromServer]="serverModel"
+        (updateSubmit)="onSubmit()"
+        (cancel)="onCancel()"
+        ></app-compare-form-container>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
