--- a/src/app/components/articles/session-audio-update/session-audio-update.component.html
+++ b/src/app/components/articles/session-audio-update/session-audio-update.component.html
@@ -1,30 +1,26 @@
 <div class="main">
     <article class="mb-5">
         <!-- Heading -->
-        <div *ngIf="formState===constants.updateState && model; else createState">
+        <div *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
             <app-edit-toggle 
             [isInUpdateState]=true 
             [link]="'..'"
             ></app-edit-toggle>
 
             <h2 class="text-center">
-                Updating SessionAudio {{ model.session_details.name }}
+                Updating SessionAudio {{ userModel.session_details.name }}
             </h2>
         </div>
 
         <div *ngIf="!fileUploadProgress; else uploadBar">
             <!-- Form -->
             <app-formly-formcontainer 
-            [model]="model" 
-            [fields]="fields" 
+            [model]="userModel" 
+            [fields]="formlyFields" 
             (formlySubmit)="onSubmit()" 
             (formlyCancel)="onCancel()"
             ></app-formly-formcontainer>
         </div>
-
-
-
-
     </article>
 
     <!-- Spinner while loading -->
