Fixed display-form container incorrectly displaying tinymce fields

--- a/src/app/components/utility/display-form-container/display-form-container.component.html
+++ b/src/app/components/utility/display-form-container/display-form-container.component.html
@@ -7,15 +7,22 @@
         class="custom-control mr-2"
         [checked]="modelCopy[field.key]"
         >
-    
+
         <label [ngClass]="{'mb-0': field.type==='checkbox'}">
             {{ field.templateOptions.label }}
             <span *ngIf="field.templateOptions.required">*</span>
         </label>
     </div>
 
-    <div class="form-control" *ngIf="field.type !== 'checkbox'">
+    <div class="form-control" *ngIf="field.type !== 'checkbox' && field.type !== 'tinymce'">
         {{ modelCopy[field.key] }}    
     </div>
+
+    <div
+    *ngIf="field.type==='tinymce'"
+    class="custom-control mr-2"
+    [innerHTML]="modelCopy[field.key]"
+    ></div>
+
 </div>
 
