--- a/src/app/components/utility/rule/rule.component.html
+++ b/src/app/components/utility/rule/rule.component.html
@@ -1,7 +1,7 @@
-<div class="card row mb-3 px-4 pt-3 pb-1" [ngClass] = "{'animate__animated animate__fadeInUp': isCreateState}" #ruleCard>
+<div class="card row mb-3 px-4 pt-3 pb-1" [ngClass] = "{'animate__animated animate__fadeInUp': isInCreateState()}" #card>
     <!-- Rules Panel Heading -->
-    <h5 class="pointer col-12 justify-content-between d-flex align-items-center" (click)="togglePanel()"> 
-        <span>{{ rule.name }}</span>
+    <h5 class="pointer col-12 justify-content-between d-flex align-items-center" (click)="toggleCard()" *ngIf="!isInOutdatedUpdateState()"> 
+        <span>{{ cardData.name }}</span>
         <i [ngClass]="{'fa icon float-right': true, 'fa-chevron-down': !isOpen, 'fa-chevron-up': isOpen}"></i>
     </h5>
 
@@ -9,27 +9,46 @@
     <div class="mb-3" [ngbCollapse]="!isOpen">
         <div class="col-12">
             <!-- Separator -->
-            <hr class="white-separator mb-2">
+            <hr class="white-separator mb-2" *ngIf="!isInOutdatedUpdateState()">
 
             <!-- Heading -->
             <div class="mb-3">
-                <h4 class="d-inline"> {{ rule.name }}</h4>
+                <h4 class="d-inline"> {{ cardData.name }}</h4>
         
                 <!-- Edit Toggler -->
                 <div class="btn btn-secondary float-right" (click)="toggleFormState()">
-                    <i class="fa fa-pencil" *ngIf="!isCreateState && !isUpdateState"></i>
-                    <i class="fa fa-times" *ngIf="isCreateState || isUpdateState"></i>
+                    <i class="fa fa-pencil" *ngIf="isInDisplayState()"></i>
+                    <i class="fa fa-times" *ngIf="!isInDisplayState()"></i>
                 </div>
             </div>
 
 
             <!-- Body -->
-            <div [innerHTML]="rule.description" *ngIf="!isUpdateState && !isCreateState; else formField"></div>
+            <div [innerHTML]="cardData.description" *ngIf="isInDisplayState()"></div>
+
+            <app-formly-formcontainer 
+            *ngIf="isInCreateState() || isInUpdateState()"
+            [model]="userModel" 
+            [fields]="formlyFields" 
+            (formlySubmit)="onSubmit()" 
+            (formlyCancel)="onCancel()"
+            ></app-formly-formcontainer>
+
+            <app-compare-form-container
+            class="d-flex justify-content-center"
+            *ngIf="isInOutdatedUpdateState()"
+            [formlyFields]="formlyFields"
+            [modelFromUser]="userModel"
+            [modelFromServer]="serverModel"
+            [displayVertically]="true"
+            (updateSubmit)="onSubmit()"
+            (cancel)="onCancel()"
+            ></app-compare-form-container>
 
             <!-- Delete Toggler -->
             <app-delete-toggle
             [deleteMessage] = "'Delete this rule ?'"
-            (deleteEvent) = "onDelete()"
+            (deleteEvent) = "articleDelete(cardData)"
             ></app-delete-toggle> 
         </div>
 
@@ -40,8 +59,8 @@
     <div id="edit-section">
         <!-- Form -->
         <app-formly-formcontainer 
-        [model]="rule" 
-        [fields]="fields" 
+        [model]="userModel" 
+        [fields]="formlyFields" 
         (formlySubmit)="onSubmit()" 
         (formlyCancel)="onCancel()"
         ></app-formly-formcontainer>
