--- a/src/app/components/utility/spell/spell.component.scss
+++ b/src/app/components/utility/spell/spell.component.scss
@@ -42,6 +42,10 @@ table{
     color: var(--red);
 }
 
+.badge{
+    height: min-content;
+}
+
 .badge-secondary:hover{
     background-color: var(--#{dark});
     color: var(--link-blue);
