--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -1,6 +1,7 @@
 <div class="main">
-    <article *ngIf="character; else loading" class="container">
+    <article *ngIf="articleData; else loading" class="container">
         <app-edit-toggle 
+        *ngIf="userHasUpdatePermission()"
         [isInUpdateState]=false 
         [link]="'update'"
         ></app-edit-toggle>
@@ -8,8 +9,8 @@
         <!-- Heading -->
         <div class="row">
             <h1 class="text-center subheading col">
-                <span *ngIf="character.title">{{ character.title }} - </span>
-                {{ character.name }}
+                <span *ngIf="articleData.title">{{ articleData.title }} - </span>
+                {{ articleData.name }}
             </h1>
         </div>
 
@@ -19,12 +20,12 @@
             <!-- Organization -->
             <div class="row">
                 <div class="col">
-                    <span *ngIf="character.gender !=='Other'">{{ character.gender }}</span>
-                    {{ character.race }}
+                    <span *ngIf="articleData.gender !=='Other'">{{ articleData.gender }}</span>
+                    {{ articleData.race }}
                     {{ createPlayerClassString() }}
-                    <span *ngIf="character.organization"> of the 
-                        <a routerLink="{{ routingService.getRoutePath('organization', {name: character.organization_details.name}) }}">
-                            {{ character.organization_details.name }}
+                    <span *ngIf="articleData.organization"> of the 
+                        <a routerLink="{{ routingService.getRoutePath('organization', {name: articleData.organization_details.name}) }}">
+                            {{ articleData.organization_details.name }}
                         </a>
                     </span> 
                 </div>    
@@ -32,15 +33,15 @@
 
             <!-- Current Location -->
             <div class="row">
-                <div *ngIf="character.current_location" class="col">
+                <div *ngIf="articleData.current_location" class="col">
                     Last known location:
                     <a routerLink="{{ routingService.getRoutePath('location', {
-                            name: character.current_location_details.name,
-                            parent_name: character.current_location_details.parent_location
+                            name: articleData.current_location_details.name,
+                            parent_name: articleData.current_location_details.parent_location
                         }) 
                     }}">
                     
-                        <strong> {{ character.current_location_details.name_full }} </strong>
+                        <strong> {{ articleData.current_location_details.name_full }} </strong>
                     </a>
                 </div>
             </div>
@@ -48,20 +49,20 @@
 
         <!-- Image Gallery -->
         <app-image-gallery
-        [article_type]="this.articleType"
-        [article_pk]="this.character.pk"
-        [images]="this.character.images"
+        [article_type]="'character'"
+        [article_pk]="this.articleData.pk"
+        [images]="this.articleData.images"
         ></app-image-gallery>
 
         <!-- Quote -->
         <div class="mb-3">
-            <app-quote-gallery [character]="character"></app-quote-gallery>
+            <app-quote-gallery [character]="articleData"></app-quote-gallery>
         </div>
 
         <!-- Description -->
         <div class="mb-5">
             <app-textfield 
-            [initialText]="character.description"
+            [initialText]="articleData.description"
             [heading]="'Description'"
             (updateText)="onDescriptionUpdate($event)"
             ></app-textfield>
@@ -71,16 +72,16 @@
         <div class="mb-5">
             <app-object-list    
             [articleType]="'item'" 
-            [createLink]="routingService.getRoutePath('item-character-create', {character_name: character.name})"
+            [createLink]="routingService.getRoutePath('item-character-create', {character_name: articleData.name})"
             [heading]="'Items of Note'"
-            [items]="character.items"
+            [items]="articleData.items"
             ></app-object-list>
         </div>
 
         <!-- Encounters -->
         <app-encounter-accordion 
-        [encounters]="character.encounters" 
-        [articleCharacter]="character"
+        [encounters]="articleData.encounters" 
+        [articleCharacter]="articleData"
         ></app-encounter-accordion>
 
         <!-- Footer (Move to other Article + Delete Article) -->
@@ -88,7 +89,7 @@
         (delete)="deleteArticle()"
         [link]="routingService.getRoutePath('character-overview')"
         [label]="'Back to Characters'"
-        [deleteMessage]="'Delete '+character.name+'?'"
+        [deleteMessage]="'Delete '+articleData.name+'?'"
         ></app-article-footer>
 
     </article>
