--- a/src/app/components/articles/creature-article/creature-article.component.html
+++ b/src/app/components/articles/creature-article/creature-article.component.html
@@ -1,6 +1,7 @@
 <div class="main">
     <article *ngIf="articleData; else loading" class="container">
         <app-edit-toggle 
+        *ngIf="userHasUpdatePermission()"
         [isInUpdateState]=false 
         [link]="'update'"
         ></app-edit-toggle>
