--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <article *ngIf="location; else loading" class="container">
+    <article *ngIf="articleData; else loading" class="container">
         <app-edit-toggle 
         [isInUpdateState]=false 
         [link]="'update'"
@@ -8,15 +8,15 @@
         <!-- Heading -->
         <div class="row">
             <h1 class="text-center col-12">
-                {{ location.name }} 
+                {{ articleData.name }} 
                 <!-- Marker Icons -->
                 <i
-                *ngFor="let marker of location.marker_details" 
+                *ngFor="let marker of articleData.marker_details" 
                 title="Marker on Map of {{marker.map}}"
                 class="mx-1 no-underline pointer icon fa fa-{{marker.map_icon}}" 
                 routerLink="{{routingService.getRoutePath('marker', {
-                        parent_location_name: location.parent_location_details.name, 
-                        location_name: location.name, 
+                        parent_location_name: articleData.parent_location_details.name, 
+                        location_name: articleData.name, 
                         map_name: marker.map
                     })
                 }}"
@@ -28,37 +28,37 @@
                 title="Add Marker"
                 [ngClass]="{'d-none': !userHasCreatePermission()}"
                 routerLink="{{routingService.getRoutePath('marker-create', {
-                        parent_location_name: location.parent_location_details.name,
-                        location_name: location.name
+                        parent_location_name: articleData.parent_location_details.name,
+                        location_name: articleData.name
                     })
                 }}"
                 ></i>
             </h1>
 
             <!-- String indicating all parent_locations -->
-            <p *ngIf="location.parent_location_list.length > 0" class="text-center font-italic col-12 mb-5">
-                <span *ngFor="let loc of location.parent_location_list; let i = index"> 
+            <p *ngIf="articleData.parent_location_list.length > 0" class="text-center font-italic col-12 mb-5">
+                <span *ngFor="let loc of articleData.parent_location_list; let i = index"> 
                     <a routerLink="{{buildLocationRoute(i)}}">
                         {{loc}}
                     </a>
                     <i class="fa fa-arrow-right mx-1"></i>
                 </span>
-                {{location.name}}
+                {{articleData.name}}
             </p>
         </div>
 
 
         <!-- Image Gallery -->
         <app-image-gallery
-        [article_type]="this.articleType"
-        [article_pk]="this.location.pk"
-        [images]="this.location.images"
+        [article_type]="'location'"
+        [article_pk]="this.articleData.pk"
+        [images]="this.articleData.images"
         ></app-image-gallery>
 
         <!-- Description -->
         <div class="mb-5">
             <app-textfield 
-            [initialText]="location.description"
+            [initialText]="articleData.description"
             [heading]="'Description'"
             (updateText)="onDescriptionUpdate($event)"
             ></app-textfield>
@@ -68,7 +68,7 @@
         <div class="mb-4">
             <app-object-list 
             [heading]="'Characters of Interest'" 
-            [items]="location.characters" 
+            [items]="articleData.characters" 
             [articleType]="'character'" 
             [createLink]="routingService.getRoutePath('character-create')"
             ></app-object-list>
@@ -77,7 +77,7 @@
         <!-- Locations of Interest -->
         <div class="encounter-list mb-5 mt-3">
             <app-location-accordion 
-            [sublocations]="location.sublocations"
+            [sublocations]="articleData.sublocations"
             ></app-location-accordion>
         </div>
 
@@ -86,7 +86,7 @@
         (delete)="deleteArticle()"
         [link]="routingService.getRoutePath('location-overview')"
         [label]="'Back to Locations'"
-        [deleteMessage]="'Delete '+location.name+'?'"
+        [deleteMessage]="'Delete '+articleData.name+'?'"
         ></app-article-footer>
 
     </article>
