--- a/src/app/components/articles/organization-article/organization-article.component.html
+++ b/src/app/components/articles/organization-article/organization-article.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <article *ngIf="organization; else loading" class="container">
+    <article *ngIf="articleData; else loading" class="container">
         <app-edit-toggle 
         [isInUpdateState]=false 
         [link]="'update'"
@@ -7,7 +7,7 @@
 
         <!-- Heading -->
         <div class="row">
-            <h1 class="text-center col"> {{ organization.name }} </h1>
+            <h1 class="text-center col"> {{ articleData.name }} </h1>
         </div>
 
         <div class="row">
@@ -15,11 +15,11 @@
             <div class="text-center subheading mb-1 col-12"> 
                 Leader: 
                 <a 
-                *ngIf="organization.leader; else Unknown" 
+                *ngIf="articleData.leader; else Unknown" 
                 class="ml-1" 
-                routerLink="{{ routingService.getRoutePath('character', {name: organization.leader}) }}"
+                routerLink="{{ routingService.getRoutePath('character', {name: articleData.leader}) }}"
                 >
-                    {{ organization.leader }}
+                    {{ articleData.leader }}
                 </a>
                 <ng-template #Unknown>Unknown</ng-template>
             </div>
@@ -28,15 +28,15 @@
             <div class="text-center mb-3 subheading col-12"> 
                 Headquarters:
                 <a 
-                *ngIf="organization.headquarter_details; else Unknown" 
+                *ngIf="articleData.headquarter_details; else Unknown" 
                 class="ml-1" 
                 routerLink="{{ routingService.getRoutePath('location', {
-                        name: organization.headquarter_details.name, 
-                        parent_name: organization.headquarter_details.parent_name
+                        name: articleData.headquarter_details.name, 
+                        parent_name: articleData.headquarter_details.parent_name
                     })
                 }}"
                 >
-                    {{ organization.headquarter_details.name_full }}
+                    {{ articleData.headquarter_details.name_full }}
                 </a>
             </div>
         </div>
@@ -44,15 +44,15 @@
 
         <!-- Image Gallery -->
         <app-image-gallery  
-        [article_type]="this.articleType"   
-        [article_pk]="this.organization.pk"
-        [images]="this.organization.images"
+        [article_type]="'organization'"   
+        [article_pk]="this.articleData.pk"
+        [images]="this.articleData.images"
         ></app-image-gallery>
 
         <!-- Description -->
         <div class="mb-5">
             <app-textfield 
-            [initialText]="organization.description"
+            [initialText]="articleData.description"
             [heading]="'Description'"
             (updateText)="onDescriptionUpdate($event)"
             ></app-textfield>
@@ -62,7 +62,7 @@
         <div class="mb-5">
             <app-object-list    
             [heading]="'Members'"
-            [items]="organization.members"
+            [items]="articleData.members"
             [createLink]="routingService.getRoutePath('character-create')"
             [articleType]="'character'"
             ></app-object-list>
@@ -73,7 +73,7 @@
         (delete)="deleteArticle()"
         [link]="routingService.getRoutePath('organization-overview')"
         [label]="'Back to Organizations'"
-        [deleteMessage]="'Delete '+organization.name+'?'"
+        [deleteMessage]="'Delete '+articleData.name+'?'"
         ></app-article-footer>
 
     </article>
