--- a/src/app/components/articles/quest-article/quest-article.component.html
+++ b/src/app/components/articles/quest-article/quest-article.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <article *ngIf="quest; else loading" class="container">
+    <article *ngIf="articleData; else loading" class="container">
         <app-edit-toggle 
         [isInUpdateState]=false
         [link]="'update'"
@@ -7,22 +7,22 @@
 
         <!-- Heading -->
         <div class="row mb-3">
-            <h1 class="text-center col"> {{ quest.name }} </h1>
+            <h1 class="text-center col"> {{ articleData.name }} </h1>
         </div>
 
         <!-- Quest Status -->
         <div class="subheading row"> 
             <span class="col-5">Status:</span>
-            <span class="col-7">{{ quest.status }}</span>     
+            <span class="col-7">{{ articleData.status }}</span>     
         </div>
 
         <!-- Quest Start -->
         <div class="subheading row">
             <div class="col-5">Start - End:</div>
             <div class="col-7">
-                {{ quest.start_session_details.name }} - 
-                <span *ngIf="quest.end_session_details; else Ongoing"> 
-                    {{ quest.end_session_details.name }} 
+                {{ articleData.start_session_details.name }} - 
+                <span *ngIf="articleData.end_session_details; else Ongoing"> 
+                    {{ articleData.end_session_details.name }} 
                 </span>
                 <ng-template #Ongoing class="d-inline">Ongoing</ng-template>
             </div>
@@ -33,10 +33,10 @@
             <span class="col-5">Quest Giver:</span>
             <span class="col-7">
                 <a 
-                *ngIf="quest.giver_details; else NoQuestGiver" 
-                routerLink="{{ routingService.getRoutePath('character', {name: quest.giver_details.name}) }}"
+                *ngIf="articleData.giver_details; else NoQuestGiver" 
+                routerLink="{{ routingService.getRoutePath('character', {name: articleData.giver_details.name}) }}"
                 >
-                    {{ quest.giver_details.name }}
+                    {{ articleData.giver_details.name }}
                 </a>
             </span>
             <ng-template #NoQuestGiver> None </ng-template>
@@ -45,7 +45,7 @@
         <!-- Description -->
         <div class="my-5">
             <app-textfield 
-            [initialText]="quest.description"
+            [initialText]="articleData.description"
             [heading]="'Description'"
             (updateText)="onDescriptionUpdate($event)"
             ></app-textfield>
