Minor heading changes

--- a/src/app/components/articles/encounter/encounter.component.html
+++ b/src/app/components/articles/encounter/encounter.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <article *ngIf="articleData; else loading" class="container">
         <div class="row">
-            <h1 class="text-center col" [innerHTML]="articleData.name"></h1>
+            <h1 class="text-center col" [innerHTML]="articleData.title"></h1>
         </div>
 
         <div class="mb-3">
